# pypgwire

./: LICENSE  README.md  pyproject.toml  test_server.py
.github/workflows/: test.yml
pypgwire/: fake_db.py  handler.py  server.py
pypgwire/protocol/: backend.py  frontend.py
tests/: test_server.py
